# dlt-firebolt

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  check_firebolt_env.py  pyproject.toml  requirements.txt
.dlt/: secrets.toml.example
.github/workflows/: publish.yml
docs/: BLOG-FACT-SHEET.md  ROADMAP-upload-staging.md  announcing-dlt-firebolt.md
firebolt_dest/: README.md  __init__.py  client.py  configuration.py  copy_sql.py  factory.py  sql_client.py  upload_client.py
scripts/: core_e2e.sh  github_stars_core_e2e.sh  hn_core_e2e.sh
tests/: conftest.py  test_capabilities.py  test_copy_sql.py  test_credentials.py  test_integration.py  test_merge_sql.py  test_sql_client.py  test_type_mapping.py  test_upload_client.py
