[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dlt-firebolt"
dynamic = ["version"]
description = "dlt destination for Firebolt (HTTP upload or S3 staging + COPY INTO)"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "Firebolt Analytics" }]
keywords = ["dlt", "firebolt", "etl", "data-pipeline"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Topic :: Database",
]
dependencies = [
  "dlt[parquet,s3,sqlalchemy]>=1.0.0",
  "firebolt-sqlalchemy",
  "requests>=2.28",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "python-dotenv",
  "requests",
]

[project.urls]
Homepage = "https://github.com/firebolt-db/dlt-firebolt"
Repository = "https://github.com/firebolt-db/dlt-firebolt"

[tool.hatch.build.targets.wheel]
packages = ["firebolt_dest"]

[tool.hatch.version]
path = "firebolt_dest/__init__.py"

[tool.pytest.ini_options]
markers = [
  "integration: live Firebolt + S3 tests (set FIREBOLT_RUN_INTEGRATION=1)",
]
